@@ -85,7 +85,7 @@
         <div class="col-md-4 col-sm-11">
           <div class="panel panel-info text-right">
             <div class="panel-heading">
-              <p class="announcement-heading inline-block" data-toggle="tooltip" rel="tooltip" data-original-title="{{node.fs.free | number:0}}">{{node.fs.free | bytes}}</p>
+              <p class="announcement-heading inline-block" data-toggle="tooltip" rel="tooltip" data-original-title="{{node.fs.available | number:0}}">{{node.fs.available | bytes}}</p>
               <p class="announcement-text">Free Disk</p>
             </div>
           </div>
